# Shopify_Technical_Challenge_S22

./: README.md  app.py  products.db  pyproject.toml
templates/: index.html
