[tool.poetry]
name = "shopify_technical_challenge_s22"
version = "0.1.0"
description = ""
authors = ["Aditi Rajnish <arajnish@uwaterloo.ca>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
click = "^8.0.3"
Flask-SQLAlchemy = "^2.5.1"
greenlet = "^1.1.2"
itsdangerous = "^2.0.1"
Jinja2 = "^3.0.3"
MarkupSafe = "^2.0.1"
SQLAlchemy = "^1.4.29"
Werkzeug = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"